--- a/Profile/Preferences/Monokai.ini
+++ b/Profile/Preferences/Monokai.ini
@@ -128,6 +128,29 @@ MainFontSize=9
 WindowConnectionInTitle=True
 ToDoOwners=
 
+[HintOptions]
+UnusedVariables=-1
+UnusedConstants=-1
+UnusedTypes=-1
+UnusedParameters=-1
+UnusedExceptions=-1
+UnusedAssignments=-1
+DummyVariablePrefix=Dummy
+CompareNulls=-1
+CompareEmptyStrings=-1
+FunctionsWithoutReturn=-1
+ToDateWithoutFormat=-1
+
+[NamingConventions]
+"T","Parameter","p_","Alpha Upper","","","Use prefix p_ and alpha upper for parameter name."
+"T","Variable","g_","Alpha Upper","","","Use g_ prefix and alpha upper for global variable name."
+"T","Variable","l_","Alpha Upper","","","Use prefix l_ and alpha upper for local variable name."
+"T","Constant","c_","Alpha Upper","","","Use prefix c_ and alpha upper for constant name."
+"T","Package","","","","_pkg","Use _pkg suffix for package name."
+"T","Exception","e_","Alpha Upper","","","Use e_ prefix and alpha upper for exception name."
+"T","Cursor","cur_","","","","Use cur_ prefix for cursor name."
+"T","Trigger","","","","_trg","Use _trg suffix for trigger name."			 
+
 [BrowserActions]
 Default.DoubleClick=Edit Spec & Body
 Default.DragAndDrop=Default
